[tool.poetry]
name = "homework"
version = "0.1.0"
description = "Project for masking bank data"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
black = "^24.0.0"
isort = "^5.13.0"
mypy = "^1.9.0"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.9
strict = true
ignore_missing_imports = true
